errorlogs/1516472432766-Program3- DeterminePrimes.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
246 INFO: PyInstaller: 3.3.1
250 INFO: Python: 3.4.4
251 INFO: Platform: Windows-XP-5.1.2600-SP3
255 INFO: wrote Z:\p2e\Program3- DeterminePrimes.spec
268 INFO: UPX is not available.
268 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
279 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516472432766', 'Z:\\p2e']
279 INFO: checking Analysis
279 INFO: Building Analysis because out00-Analysis.toc is non existent
280 INFO: Initializing module dependency graph...
295 INFO: Initializing module graph hooks...
303 INFO: Analyzing base_library.zip ...
26789 INFO: Processing pre-find module path hook   site
26791 INFO: site: retargeting to fake-dir 'c:\\Python34\\lib\\site-packages\\PyInstaller\\fake-modules'
14089 INFO: Processing pre-find module path hook   distutils
20916 INFO: running Analysis out00-Analysis.toc
21969 INFO: Caching module hooks...
22001 INFO: Analyzing Z:\p2e\workingdir\1516472432766\Program3- DeterminePrimes.py

Syntax error in Z:\p2e\workingdir\1516472432766\Program3- DeterminePrimes.py
  File "Z:\p2e\workingdir\1516472432766\Program3- DeterminePrimes.py", line 33
     print(f"There are {count} prime numbers less than {number_bound}.")
                                                                      ^
 SyntaxError: invalid syntax

